--- a/ugexe/zef/.appveyor.yml
+++ b/ugexe/zef/.appveyor.yml
@@ -3,33 +3,44 @@ os: Visual Studio 2015
 platform: x64
 
 install:
-  - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
-  - choco install strawberryperl
-  - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
-  - git clone https://github.com/rakudo/rakudo.git %APPVEYOR_BUILD_FOLDER%\..\rakudo
-  - cd %APPVEYOR_BUILD_FOLDER%\..\rakudo
-  - perl Configure.pl --gen-moar=HEAD --gen-nqp
-  - nmake install
-  - SET PATH=%APPVEYOR_BUILD_FOLDER%\..\rakudo\install\bin;%PATH%
-  - SET ZEF_PLUGIN_DEBUG=1
-  - cd %APPVEYOR_BUILD_FOLDER%
+    - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
+    - choco install strawberryperl
+    - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
+    - git clone https://github.com/rakudo/rakudo.git %APPVEYOR_BUILD_FOLDER%\..\rakudo
+    - cd %APPVEYOR_BUILD_FOLDER%\..\rakudo
+    - perl Configure.pl --gen-moar --gen-nqp
+    - nmake install
+    - SET PATH=%APPVEYOR_BUILD_FOLDER%\..\rakudo\install\bin;%PATH%
+    - SET ZEF_PLUGIN_DEBUG=1
+    - SET ZEF_BUILDPM_DEBUG=1
+    - SET PATH=%APPVEYOR_BUILD_FOLDER%\..\rakudo\install\share\perl6\site\bin;%PATH%
+    - cd %APPVEYOR_BUILD_FOLDER%
 
 build: off
 
 test_script:
-  # Sanity
-  - prove -v -e "perl6 -Ilib" t/
+    # test local path install
+    - perl6 -Ilib bin/zef --verbose install .
 
-  # Can install itself (or anything) without being installed itself
-  - perl6 -Ilib bin/zef --verbose install .
+    # change path to make sure next `zef` commands aren't using any files in cwd or lib/
+    - cd %APPVEYOR_BUILD_FOLDER%\..
 
-  # Setup PATH to give access to the `zef` command (shown in stdout of prev command)
-  - SET PATH=%APPVEYOR_BUILD_FOLDER%\..\rakudo\install\share\perl6\site\bin;%PATH%
-  - cd %APPVEYOR_BUILD_FOLDER%\..
+    # test bells and whistles
+    - zef -v test ./zef
+    - zef -v update
+    - zef -v search Base64
+    - zef -v info Base64
+    - zef -v rdepends Base64
+    - zef -v fetch Base64
+    - zef -v install Base64
+    - zef -v --max=10 list
+    - zef -v --installed list
 
-  # Test that our installed bin/ script works, as well as basic ::ContentStorage::P6C functionality
-  # [--force]: Its reinstalling the same version (or an unversioned) copy; tells CU::R::I this is ok
-  # [--/test]: Disable testing. Already tested twice (see: `prove` and `bin/zef install .`)
-  - zef -v --force --/test install CSV::Parser
+    # Currently down :(
+    #- zef -v install http://hack.p6c.org:5001/authors/id/P/PS/PSIXDISTS/Perl6/CSV-Parser-0.000.002_1601022004.tar.gz
+
+    - zef --/confirm nuke TempDir StoreDir RootDir
+    - zef update cached # test single storage update; should be 0 after previous nuke
+    - zef --/confirm nuke site home # no more `zef` command
 
 shallow_clone: true
