--- a/perl6/DBIish/.travis.yml
+++ b/perl6/DBIish/.travis.yml
@@ -5,11 +5,14 @@ services:
 language: perl6
 
 perl6:
+    - 2016.01
     - latest
 sudo: false
 install:
     - rakudobrew build-panda
-    - panda install .
+    - panda installdeps .
+    # Will test later
+    - panda --notests install .
 before_install:
     # mysql
     - mysql -e "CREATE DATABASE dbdishtest;" -uroot
