--- a/azawawi/perl6-browser-open/.travis.yml
+++ b/azawawi/perl6-browser-open/.travis.yml
@@ -1,5 +1,18 @@
+sudo: required
+
 language: perl6
+
+os:
+  - linux
+  - osx
+
 perl6:
-    - latest
-    - 2015.06
-    - 2015.05
+  - 2016.03
+  - latest
+
+install:
+  - echo $TRAVIS_OS_NAME
+  - rakudobrew build panda
+  - panda installdeps .
+
+script: prove -v -e "perl6 -Ilib" t/
