git subrepo clone --force git://github.com/azawawi/perl6-net-curl.git azawawi/perl6-net-curl
subrepo:
  subdir:   "azawawi/perl6-net-curl"
  merged:   "d1b518c"
upstream:
  origin:   "git://github.com/azawawi/perl6-net-curl.git"
  branch:   "master"
  commit:   "d1b518c"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/azawawi/perl6-net-curl/.travis.yml
+++ b/azawawi/perl6-net-curl/.travis.yml
@@ -7,7 +7,7 @@ os:
   - osx
 
 perl6:
-  - 2016.02
+  - 2016.03
   - latest
 
 install:
@@ -19,6 +19,6 @@ install:
   - if [ "$TRAVIS_OS_NAME" == "osx"   ]; then ls /usr/local/lib/                   ; fi
   - if [ "$TRAVIS_OS_NAME" == "osx"   ]; then ls /usr/lib/                         ; fi
   - rakudobrew build panda
-  - panda installdeps .
+  - panda --verbose installdeps .
 
 script: NETWORK_TESTING=1 prove -v -e "perl6 -Ilib" t/
