git subrepo clone --force git://github.com/azawawi/perl6-electron.git azawawi/perl6-electron
subrepo:
  subdir:   "azawawi/perl6-electron"
  merged:   "1d21370"
upstream:
  origin:   "git://github.com/azawawi/perl6-electron.git"
  branch:   "master"
  commit:   "1d21370"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/azawawi/perl6-electron/appveyor.yml
+++ b/azawawi/perl6-electron/appveyor.yml
@@ -8,10 +8,10 @@ install:
   - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
   - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
   - SET PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
-  - rakudobrew build moar 2016.01
-  - rakudobrew build panda
+  - rakudobrew build moar 2016.03
+  - rakudobrew build zef
   - cd %APPVEYOR_BUILD_FOLDER%
-  - panda installdeps .
+  - zef --verbose --depsonly install .
 
 build: off
 
