--- a/azawawi/perl6-selenium-webdriver/.travis.yml
+++ b/azawawi/perl6-selenium-webdriver/.travis.yml
@@ -1,12 +1,29 @@
+sudo: required
+
 language: perl6
+
+os:
+  - linux
+  - osx
+
 perl6:
-    - latest
+  - 2016.03
+  - latest
 
 install:
-    - rakudobrew build-panda
-    - panda update && panda install File::Temp File::Which File::Zip Find::Bundled HTTP::UserAgent JSON::Tiny MIME::Base64 URI::Encode
+  - echo $TRAVIS_OS_NAME
+  - rakudobrew build panda
+  - panda installdeps .
 
-before_script:  # firefox tests
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+before_script:
+  # Start xvfb for Firefox headless testing and give it some time to start
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export DISPLAY=:99.0         ; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sh -e /etc/init.d/xvfb start ; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sleep 3                      ; fi
+  # Install PhantomJS on MacOSX using homebrew
+  - if [ "$TRAVIS_OS_NAME" == "osx"   ]; then brew update                  ; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx"   ]; then brew install phantomjs       ; fi
+  # Show PhantomJS version
+  - phantomjs --version
+
+script: prove -v -e "perl6 -Ilib" t/
