git subrepo clone --force git://github.com/kuerbis/Term-Choose-p6.git kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "e0b10b3"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-p6.git"
  branch:   "master"
  commit:   "e0b10b3"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-Choose-p6/.travis.yml
+++ b/kuerbis/Term-Choose-p6/.travis.yml
@@ -6,7 +6,8 @@ perl6:
   - latest
 install:
   - rakudobrew build-panda
-  - panda installdeps .
-  - panda install Term::termios
-  - panda install Terminal::WCWidth
+  - panda --verbose installdeps .
+  - panda --verbose install NCurses
+  - panda --verbose install Term::termios
+  - panda --verbose install Terminal::WCWidth
 sudo: false
