git subrepo clone --force git://github.com/skaji/mi6.git skaji/mi6
subrepo:
  subdir:   "skaji/mi6"
  merged:   "24a70fb"
upstream:
  origin:   "git://github.com/skaji/mi6.git"
  branch:   "master"
  commit:   "24a70fb"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/skaji/mi6/.travis.yml
+++ b/skaji/mi6/.travis.yml
@@ -6,5 +6,5 @@ install:
   - panda --notests installdeps .
 script:
   - perl6 -MPanda::Builder -e 'Panda::Builder.build(~$*CWD)'
-  - PERL6LIB=$PWD/lib prove -e perl6 -vr t/
+  - PERL6LIB=$PWD/lib prove -e perl6 -vr t/ xt/
 sudo: false
