--- a/kuerbis/Term-Choose-p6/.travis.yml
+++ b/kuerbis/Term-Choose-p6/.travis.yml
@@ -6,8 +6,8 @@ perl6:
   - latest
 install:
   - rakudobrew build-panda
-  - panda --verbose installdeps .
-  - panda --verbose install NCurses
-  - panda --verbose install Term::termios
-  - panda --verbose install Terminal::WCWidth
+  - panda installdeps .
+  - panda install NCurses
+  - panda install Term::termios
+  - panda install Terminal::WCWidth
 sudo: false
