git subrepo clone --force git://github.com/scmorrison/perl6-aws-pricing.git scmorrison/perl6-aws-pricing
subrepo:
  subdir:   "scmorrison/perl6-aws-pricing"
  merged:   "8fbc29e"
upstream:
  origin:   "git://github.com/scmorrison/perl6-aws-pricing.git"
  branch:   "master"
  commit:   "8fbc29e"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/scmorrison/perl6-aws-pricing/.travis.yml
+++ b/scmorrison/perl6-aws-pricing/.travis.yml
@@ -1,10 +1,10 @@
 language: perl6
 perl6:
-  - 2015.12
+  - 2016.06
 install:
   - rakudobrew build-panda
-  - panda install .
-  - panda installdeps .
+  - panda --notests install .
+  - panda --notests installdeps .
 script:
   - prove -v -e 'perl6 -Ilib' t/
 sudo: false
