git subrepo clone --force git://github.com/skinkade/crypt-random.git skinkade/crypt-random
subrepo:
  subdir:   "skinkade/crypt-random"
  merged:   "a16fa82"
upstream:
  origin:   "git://github.com/skinkade/crypt-random.git"
  branch:   "master"
  commit:   "a16fa82"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/skinkade/crypt-random/appveyor.yml
+++ b/skinkade/crypt-random/appveyor.yml
@@ -6,12 +6,10 @@ install:
   - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
   - choco install strawberryperl
   - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
-  - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
-  - SET PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
-  - rakudobrew build moar 2016.01
-  - rakudobrew build zef
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - zef --verbose --depsonly install .
+  - appveyor DownloadFile "http://rakudo.org/downloads/star/rakudo-star-2016.04-x86_64 (JIT).msi" -FileName "%APPVEYOR_BUILD_FOLDER%\rakudo.msi"
+  - msiexec /i rakudo.msi /quiet /qn /norestart /log install.log
+  - SET PATH=C:\rakudo\bin;C:\rakudo\share\perl6\site\bin;%PATH%
+  - panda installdeps .
 
 build: off
 
