git subrepo clone --force git://github.com/sergot/openssl.git sergot/openssl
subrepo:
  subdir:   "sergot/openssl"
  merged:   "d71196f"
upstream:
  origin:   "git://github.com/sergot/openssl.git"
  branch:   "master"
  commit:   "d71196f"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/sergot/openssl/.travis.yml
+++ b/sergot/openssl/.travis.yml
@@ -2,8 +2,7 @@ language: perl6
 perl6:
   - latest
 install:
-  - rakudobrew build-panda
-  - panda installdeps .
+  - perl6 -v
 script:
   - prove -v -e 'perl6 -Ilib' t/
 sudo: false
