git subrepo clone --force git://github.com/MARTIMM/mongo-perl6-driver.git MARTIMM/mongo-perl6-driver
subrepo:
  subdir:   "MARTIMM/mongo-perl6-driver"
  merged:   "fa7964d"
upstream:
  origin:   "git://github.com/MARTIMM/mongo-perl6-driver.git"
  branch:   "master"
  commit:   "fa7964d"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/MARTIMM/mongo-perl6-driver/.travis.yml
+++ b/MARTIMM/mongo-perl6-driver/.travis.yml
@@ -6,7 +6,8 @@ language: perl6
 
 # Torpede the install with a wrong git version
 perl6:
-  - 2016.04-000-aaaaaaa
+  - latest
+#  - 2016.04-000-aaaaaaa
 
 # Install mongodb server at ./Travis-ci/MongoDB
 #
@@ -23,7 +24,7 @@ before_install:
 #  - P6=${TCI}/P6Software/rakudo/install
 #  - PATH=${P6}/bin:${P6}/share/perl6/site/bin:$PATH
 #  - PERL6LIB=lib
-env: CACHE_NAME=JOB1
+#env: CACHE_NAME=JOB1
 
 #install:
 #  - $TRAVIS_BUILD_DIR/Travis-ci/install-mongodb.sh 3.0.5
