git subrepo clone --force git://github.com/niner/Inline-Perl5.git niner/Inline-Perl5
subrepo:
  subdir:   "niner/Inline-Perl5"
  merged:   "ca3950f"
upstream:
  origin:   "git://github.com/niner/Inline-Perl5.git"
  branch:   "master"
  commit:   "ca3950f"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/niner/Inline-Perl5/Makefile.in
+++ b/niner/Inline-Perl5/Makefile.in
@@ -1,8 +1,9 @@
 .PHONY: clean test
-all: %DESTDIR%/resources/libraries/%p5helper%
+CC = %CC%
+all: %p5helper%
 clean:
-	rm %DESTDIR%/resources/libraries/%p5helper%
-%DESTDIR%/resources/libraries/%p5helper%: p5helper.c
-	gcc -Wall p5helper.c `perl -MExtUtils::Embed -e ccopts -e ldopts` -shared -o %DESTDIR%/resources/libraries/%p5helper% -fPIC -g
+	rm "%p5helper%"
+%p5helper%: p5helper.c
+	$(CC) -Wall p5helper.c %perlopts% -shared -o "%p5helper%" -fPIC -g
 test: all
 	prove -e 'perl6 -Ilib' t
