--- a/melezhik/sparrowdo/.travis.yml
+++ b/melezhik/sparrowdo/.travis.yml
@@ -5,7 +5,7 @@ install:
   - rakudobrew build-panda
   - panda --notests installdeps .
 script:
-  - perl6 -c bin/sparrowdo
+  - perl6 -Ilib -c bin/sparrowdo
   - prove -vr -e 'perl6 -Ilib' t/
 sudo: false
 
