--- a/samgwise/p6-Numeric-Pack/appveyor.yml
+++ b/samgwise/p6-Numeric-Pack/appveyor.yml
@@ -15,6 +15,11 @@ install:
   # - panda --notests installdeps .
   # - perl6 -MPanda::Builder -e 'Panda::Builder.build(~$*CWD)'
   - zef --verbose --depsonly install .
+  # while we are using a native build of Rakudo we'll need to go around the build system a bit
+  - perl6 Build.p6
+  # FIX fo perl6 not being found
+  - perl6 -e "spurt 'Makefile', slurp('Makefile').subst(/perl6/, 'perl', :g)"
+  - nmake
 
 build: false
 
