git subrepo clone --force git://github.com/cosimo/perl6-cache-memcached.git cosimo/perl6-cache-memcached
subrepo:
  subdir:   "cosimo/perl6-cache-memcached"
  merged:   "8555a08"
upstream:
  origin:   "git://github.com/cosimo/perl6-cache-memcached.git"
  branch:   "master"
  commit:   "8555a08"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/cosimo/perl6-cache-memcached/.travis.yml
+++ b/cosimo/perl6-cache-memcached/.travis.yml
@@ -7,7 +7,6 @@ services:
 sudo: false
 perl6:
   - latest
-#  - 2015.09
 install:
   - rakudobrew build-panda
-  - panda installdeps .
+  - panda --notests installdeps .
