--- a/azawawi/perl6-magickwand/appveyor.yml
+++ b/azawawi/perl6-magickwand/appveyor.yml
@@ -4,16 +4,16 @@ platform: x64
 
 install:
   - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
-  - choco install strawberryperl
+  - choco install strawberryperl --allow-empty-checksums
   - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
-  - SET MAGICK_DLL_INSTALLER=ImageMagick-6.9.3-7-Q16-x64-dll.exe
+  - SET MAGICK_DLL_INSTALLER=ImageMagick-6.9.7-4-Q16-x64-dll.exe
   - appveyor DownloadFile http://www.imagemagick.org/download/binaries/%MAGICK_DLL_INSTALLER%
   - "%MAGICK_DLL_INSTALLER% /SILENT"
   - SET MAGICK_DLL_INSTALLER=
-  - SET PATH=C:\Program Files\ImageMagick-6.9.3-Q16;%PATH%
+  - SET PATH=C:\Program Files\ImageMagick-6.9.7-Q16;%PATH%
   - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
   - SET PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
-  - rakudobrew build moar 2016.03
+  - rakudobrew build moar 2016.11
   - rakudobrew build zef
   - cd %APPVEYOR_BUILD_FOLDER%
   - zef --depsonly install .
