git subrepo clone --force git://github.com/azawawi/perl6-clean.git azawawi/perl6-clean
subrepo:
  subdir:   "azawawi/perl6-clean"
  merged:   "c391377"
upstream:
  origin:   "git://github.com/azawawi/perl6-clean.git"
  branch:   "master"
  commit:   "c391377"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/azawawi/perl6-clean/.travis.yml
+++ b/azawawi/perl6-clean/.travis.yml
@@ -7,12 +7,17 @@ os:
   - osx
 
 perl6:
-  - 2016.04
+  - 2016.12
   - latest
 
 install:
   - echo $TRAVIS_OS_NAME
-  - rakudobrew build panda
-  - panda installdeps .
+  - rakudobrew build zef
+  - zef --depsonly install .
+  - zef install Test::META
+  - zef build .
 
-script: prove -v -e "perl6 -Ilib" t/
+script:
+    - prove -ve "perl6 -Ilib" t
+    - TEST_AUTHOR=1 prove -ve "perl6 -Ilib" t
+    - zef install Clean
