git subrepo clone (merge) --force git://github.com/dagurval/perl6-gd-raw.git dagurval/perl6-gd-raw
subrepo:
  subdir:   "dagurval/perl6-gd-raw"
  merged:   "da416b1"
upstream:
  origin:   "git://github.com/dagurval/perl6-gd-raw.git"
  branch:   "master"
  commit:   "da416b1"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/dagurval/perl6-gd-raw/.travis.yml
+++ b/dagurval/perl6-gd-raw/.travis.yml
@@ -1,11 +1,10 @@
 ---
-sudo: true
+sudo: required
+dist: trusty
 language: perl6
 perl6:
     - latest
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y libgd2-noxpm
+    - sudo apt-get install -y libgd3
 install:
-    - rakudobrew build-panda
-    - panda --notests installdeps .
