git subrepo clone --force git://github.com/azawawi/perl6-electron.git azawawi/perl6-electron
subrepo:
  subdir:   "azawawi/perl6-electron"
  merged:   "7e54dfc"
upstream:
  origin:   "git://github.com/azawawi/perl6-electron.git"
  branch:   "master"
  commit:   "7e54dfc"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/azawawi/perl6-electron/.travis.yml
+++ b/azawawi/perl6-electron/.travis.yml
@@ -1,5 +1,3 @@
-sudo: required
-
 language: perl6
 
 os:
@@ -7,12 +5,15 @@ os:
   - osx
 
 perl6:
-  - 2016.03
+  - 2016.11
   - latest
 
 install:
-  - echo $TRAVIS_OS_NAME
-  - rakudobrew build panda
-  - panda installdeps .
+  - rakudobrew build zef
+  - zef --depsonly install .
+  - zef install Test::META
+  - zef build .
 
-script: prove -v -e perl6 t/
+script:
+    - AUTHOR_TESTING=1 prove -ve "perl6 -Ilib"
+    - zef install .
