git subrepo clone --force git://github.com/paultcochrane/Perl6Mongers-Hannover.git paultcochrane/Perl6Mongers-Hannover
subrepo:
  subdir:   "paultcochrane/Perl6Mongers-Hannover"
  merged:   "7b366be"
upstream:
  origin:   "git://github.com/paultcochrane/Perl6Mongers-Hannover.git"
  branch:   "master"
  commit:   "7b366be"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/paultcochrane/Perl6Mongers-Hannover/.travis.yml
+++ b/paultcochrane/Perl6Mongers-Hannover/.travis.yml
@@ -1,19 +1,11 @@
 language: perl6
 
+env:
+    AUTHOR_TESTING=1
+
 perl6:
     - latest
-    - 2016.02
-    - 2016.01
-    - 2015.12
-    - 2015.11
-    - "2015.10"
-    - 2015.09
 
 install:
-    rakudobrew build-panda $([ "$TRAVIS_PERL6_VERSION" == "latest" ] && echo "" || echo $TRAVIS_PERL6_VERSION)
-
-before_script:
-    panda install IO::Capture::Simple
-
-script:
-    panda-test
+    - rakudobrew build-panda
+    - panda installdeps .
