--- a/skids/perl6xproto/META6.yaml
+++ b/skids/perl6xproto/META6.yaml
@@ -9,6 +9,7 @@ perl: 6
 provides:
   X::Protocol: lib/X/Protocol.pm6
   X::Protocol::HTTP: lib/X/Protocol/HTTP.pm6
+  X::Protocol::X11: lib/X/Protocol/X11.pm6
 support:
   source: https://github.com/skids/perl6xproto.git
 version: v0.0.1
