--- a/tokuhirom/p6-HTTP-Server-Tiny/.travis.yml
+++ b/tokuhirom/p6-HTTP-Server-Tiny/.travis.yml
@@ -8,6 +8,8 @@ install:
   - rakudobrew build-panda
   - panda --notests installdeps .
 script:
-  - perl6 -MPanda::Builder -e 'Panda::Builder.new.build($*CWD)'
   - PERL6LIB=$PWD/lib prove -e perl6 -r t/
 sudo: false
+matrix:
+   allow_failures:
+      - os: osx
