git subrepo clone --force git://github.com/jonathanstowe/JSON-Infer.git jonathanstowe/JSON-Infer
subrepo:
  subdir:   "jonathanstowe/JSON-Infer"
  merged:   "8ad5cd6"
upstream:
  origin:   "git://github.com/jonathanstowe/JSON-Infer.git"
  branch:   "master"
  commit:   "8ad5cd6"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/jonathanstowe/JSON-Infer/.travis.yml
+++ b/jonathanstowe/JSON-Infer/.travis.yml
@@ -7,5 +7,5 @@ perl6:
   - latest
 install:
   - rakudobrew build-panda
-  - panda installdeps .
-  - panda installdeps .
+  - panda --notests installdeps .
+  - panda --notests installdeps .
