git subrepo clone --force git://github.com/bradclawsie/Hash-Consistent.git bradclawsie/Hash-Consistent
subrepo:
  subdir:   "bradclawsie/Hash-Consistent"
  merged:   "b3f5c9d"
upstream:
  origin:   "git://github.com/bradclawsie/Hash-Consistent.git"
  branch:   "master"
  commit:   "b3f5c9d"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/bradclawsie/Hash-Consistent/.travis.yml
+++ b/bradclawsie/Hash-Consistent/.travis.yml
@@ -1,9 +1,10 @@
----
 sudo: false
 language: perl6
 perl6:
   - latest
+
 install:
-  - rakudobrew build-panda
-  - panda install String::CRC32
-  - panda install Subsets::Common
+  - rakudobrew build zef
+
+before_script:
+  - zef --/test --/test-depends install String::CRC32;
