--- a/goneri/p6-Email-Notmuch/.travis.yml
+++ b/goneri/p6-Email-Notmuch/.travis.yml
@@ -2,13 +2,53 @@ branches:
   except:
     - gh-pages
 language: perl6
+perl6:
+  - latest
+
+# We need a newer version of zlib to build notmuch from source as is available
+# in precise.
+dist: trusty
+
 addons:
   apt:
     packages:
-    - libnotmuch-dev
-perl6:
-  - latest
+      # The gpgme build files are needed by the gpgme python module
+      # (a dependency of alot).
+      - libgpgme11-dev
+      # The notmuch libs are needed to actually run alot.  But currently the
+      # available version is not compatible with alot, so we have to build
+      # from source.
+      #- notmuch
+      # Dependencies to build notmuch from source.
+      - libxapian-dev
+      - libtalloc-dev
+      - zlib1g-dev
+      - libgmime-2.6-dev
+
+# NOTE: copy from https://github.com/pazz/alot/blob/master/.travis.yml
+# Build notmuch and the python notmuch libs manually.  The versions of the
+# notmuch library and the python module which are available in the 12.04 and
+# 14.04 Ubuntu repos do not match and do not fullfill the version requirement
+# for alot.
+before_install: |
+  set -e
+  # Clone the notmuch repository and move into it.
+  git clone --depth 1 git://notmuchmail.org/git/notmuch
+  cd notmuch
+  # Make and install the library.  We install the library without sudo as we
+  # might want to switch to the travis container later.
+  ./configure --prefix=$HOME/.local
+  make
+  make install
+  # Export the library search path.
+  export LD_LIBRARY_PATH=$HOME/.local/lib
+  # Install the python bindings.
+  cd bindings/python
+  pip install .
+  # Move out of the notmuch dir again.
+  cd ../../..
+
 install:
   - rakudobrew build-panda
-  - export PATH=~/.rakudobrew/bin:~/.rakudobrew/moar-nom/install/share/perl6/site/bin:~/.rakudobrew/moar-nom/panda/bin:$PATH
   - panda installdeps .
+  - panda install .
