--- a/ugexe/zef/.appveyor.yml
+++ b/ugexe/zef/.appveyor.yml
@@ -4,9 +4,9 @@ platform: x64
 
 install:
     - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
-    - choco install strawberryperl
+    - appveyor-retry choco install strawberryperl --allow-empty-checksums
     - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
-    - appveyor DownloadFile "http://rakudo.org/downloads/star/rakudo-star-2016.07-x86_64 (JIT).msi" -FileName "%APPVEYOR_BUILD_FOLDER%\rakudo.msi"
+    - appveyor DownloadFile "http://rakudo.org/downloads/star/rakudo-star-latest-x86_64 (JIT).msi" -FileName "%APPVEYOR_BUILD_FOLDER%\rakudo.msi"
     - msiexec /i rakudo.msi /quiet /qn /norestart /log install.log
     - SET PATH=C:\rakudo\bin;C:\rakudo\share\perl6\site\bin;%PATH%
     - SET ZEF_PLUGIN_DEBUG=1
@@ -33,9 +33,10 @@ test_script:
     - zef -v --installed list
 
     - zef -v install http://hack.p6c.org:5001/authors/id/P/PS/PSIXDISTS/Perl6/CSV-Parser-0.000.002_1601022004.tar.gz
+    - zef -v upgrade CSV::Parser
 
     - zef --/confirm nuke TempDir StoreDir RootDir
-    - zef update cached # test single storage update; should be 0 after previous nuke
+    - zef update cached # test single repository update; should be 0 after previous nuke
     - zef --/confirm nuke site home # no more `zef` command
 
 shallow_clone: true
