git subrepo clone --force https://github.com/melezhik/sparrowdo.git melezhik/sparrowdo
subrepo:
  subdir:   "melezhik/sparrowdo"
  merged:   "4d02b6a"
upstream:
  origin:   "https://github.com/melezhik/sparrowdo.git"
  branch:   "master"
  commit:   "4d02b6a"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/melezhik/sparrowdo/.travis.yml
+++ b/melezhik/sparrowdo/.travis.yml
@@ -1,11 +1,24 @@
 language: perl6
+
 perl6:
   - latest
+
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y cpanminus
+  - sudo cpanm -q --notest install Sparrow
+  - cat /dev/zero | ssh-keygen -q -N ""
+  - cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+  - chmod og-wx ~/.ssh/authorized_keys
+
 install:
   - rakudobrew build-panda
   - panda --notests installdeps .
+
 script:
   - perl6 -Ilib -c bin/sparrowdo
   - prove -vr -e 'perl6 -Ilib' t/
-sudo: false
-
+  - panda install .
+  - panda install Sparrowdo::Sparrow::Update
+  - perl6 -Ilib bin/sparrowdo --module_run=Sparrow::Update --bootstrap --host=127.0.0.1
+  - strun --root examples/
