--- a/perl6/doc/highlights/package.json
+++ b/perl6/doc/highlights/package.json
@@ -8,7 +8,8 @@
   },
   "author": "Samantha McVey",
   "license": "Artistic-2.0",
-  "homepage": "https://github.com/samcv/perl6-highlights",
+  "homepage": "docs.perl6.org",
+  "repository": "https://github.com/perl6/doc.git",
   "dependencies": {
     "highlights": "latest",
     "less": "latest",
