--- a/azawawi/perl6-magickwand/appveyor.yml
+++ b/azawawi/perl6-magickwand/appveyor.yml
@@ -2,18 +2,23 @@ os: Visual Studio 2015
 
 platform: x64
 
+environment:
+        matrix:
+        - test_moar: 2016.11
+        - test_moar: '' #latest
+
 install:
   - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
   - choco install strawberryperl --allow-empty-checksums
   - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
-  - SET MAGICK_DLL_INSTALLER=ImageMagick-6.9.7-4-Q16-x64-dll.exe
+  - SET MAGICK_DLL_INSTALLER=ImageMagick-6.9.7-5-Q16-x64-dll.exe
   - appveyor DownloadFile http://www.imagemagick.org/download/binaries/%MAGICK_DLL_INSTALLER%
   - "%MAGICK_DLL_INSTALLER% /SILENT"
   - SET MAGICK_DLL_INSTALLER=
   - SET PATH=C:\Program Files\ImageMagick-6.9.7-Q16;%PATH%
   - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
   - SET PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
-  - rakudobrew build moar 2016.11
+  - rakudobrew build moar %TEST_MOAR%
   - rakudobrew build zef
   - cd %APPVEYOR_BUILD_FOLDER%
   - zef --depsonly install .
