git subrepo clone --force git://github.com/azawawi/perl6-odoo-client.git azawawi/perl6-odoo-client
subrepo:
  subdir:   "azawawi/perl6-odoo-client"
  merged:   "4ddb0a9"
upstream:
  origin:   "git://github.com/azawawi/perl6-odoo-client.git"
  branch:   "master"
  commit:   "4ddb0a9"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/azawawi/perl6-odoo-client/.travis.yml
+++ b/azawawi/perl6-odoo-client/.travis.yml
@@ -18,6 +18,5 @@ install:
   - zef build .
 
 script:
-    - prove -ve "perl6 -Ilib"
     - AUTHOR_TESTING=1 prove -ve "perl6 -Ilib"
-    - zef install Odoo::Client
+    - zef install .
