git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "cfcfe5d"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "cfcfe5d"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/perl6/doc/highlights/package.json
+++ b/perl6/doc/highlights/package.json
@@ -11,8 +11,9 @@
   "homepage": "docs.perl6.org",
   "repository": "https://github.com/perl6/doc.git",
   "dependencies": {
-    "highlights": "latest",
+    "highlights": "<2.0",
     "less": "latest",
-    "coffee-script": "latest"
+    "coffee-script": "latest",
+    "node-sass": "latest"
   }
 }
