git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "c7b5052"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "c7b5052"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/perl6/doc/.travis.yml
+++ b/perl6/doc/.travis.yml
@@ -39,7 +39,7 @@ install:
 
 script:
   - make test
-  - export CXX=g++-4.8
+  - export CXX=$(command -v g++-4.8 >/dev/null 2>&1; if [ $? -eq 1 ]; then printf "g++"; else printf "g++-4.8"; fi)
   - $CXX --version
   - make html
 matrix:
