--- a/azawawi/perl6-opencv/.gitignore
+++ b/azawawi/perl6-opencv/.gitignore
@@ -1,27 +1,2 @@
-/blib/
-/.build/
-_build/
-cover_db/
-inc/
-Build
-!Build/
-Build.bat
-.last_cover_stats
-/Makefile
-/Makefile.old
-/MANIFEST.bak
-/META.yml
-/META.json
-/MYMETA.*
-nytprof.out
-/pm_to_blib
-*.o
-*.bs
-*.exp
-*.lib
-*.obj
-/_eumm/
-resources/libopencv-perl6.so
+resources
 lib/.precomp
-.precomp
-src/Makefile
