--- a/p6-pdf/perl6-PDF-Grammar/.travis.yml
+++ b/p6-pdf/perl6-PDF-Grammar/.travis.yml
@@ -1,10 +1,8 @@
-branches:
-  except:
-    - gh-pages
 language: perl6
 sudo: false
 perl6:
   - latest
+  - 2016.12
 install:
-  - rakudobrew build-panda
-  - panda installdeps .
+  - rakudobrew build zef
+  - zef --depsonly install .
