--- a/azawawi/perl6-file-homedir/.travis.yml
+++ b/azawawi/perl6-file-homedir/.travis.yml
@@ -1,5 +1,3 @@
-sudo: required
-
 language: perl6
 
 os:
@@ -7,12 +5,18 @@ os:
   - osx
 
 perl6:
-  - 2016.08.1
+  - 2017.01
   - latest
 
-install:
+before_install:
   - echo $TRAVIS_OS_NAME
-  - rakudobrew build panda
-  - panda installdeps .
 
-script: prove -v -e "perl6 -Ilib" t/
+install:
+  - rakudobrew build zef
+  - zef --depsonly install .
+  - zef install Test::META
+  - zef build .
+
+script:
+    - AUTHOR_TESTING=1 prove -ve "perl6 -Ilib"
+    - zef install .
