git subrepo clone --force git://github.com/azawawi/farabi6.git azawawi/farabi6
subrepo:
  subdir:   "azawawi/farabi6"
  merged:   "bb83993"
upstream:
  origin:   "git://github.com/azawawi/farabi6.git"
  branch:   "master"
  commit:   "bb83993"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/azawawi/farabi6/.travis.yml
+++ b/azawawi/farabi6/.travis.yml
@@ -1,8 +1,22 @@
 language: perl6
+
+os:
+  - linux
+  - osx
+
 perl6:
-    - latest
-    - 2015.12
+  - 2016.11
+  - latest
+
+before_install:
+  - echo $TRAVIS_OS_NAME
 
 install:
-    - rakudobrew build-panda
-    - panda install File::Temp HTTP::Easy JSON::Tiny Pod::To::HTML p6doc Debugger::UI::CommandLine Browser::Open
+  - rakudobrew build zef
+  - zef --depsonly install .
+  - zef install Test::META
+  - zef build .
+
+script:
+    - AUTHOR_TESTING=1 prove -ve "perl6 -Ilib"
+    - zef install .
