--- a/azawawi/farabi6/appveyor.yml
+++ b/azawawi/farabi6/appveyor.yml
@@ -2,24 +2,28 @@ os: Visual Studio 2015
 
 platform: x64
 
+environment:
+        matrix:
+        - test_moar: 2016.01
+        - test_moar: '' #latest
+
 install:
   - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
-  - choco install strawberryperl
+  - choco install strawberryperl --allow-empty-checksums
   - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
-  - git clone https://github.com/rakudo/rakudo.git %APPVEYOR_BUILD_FOLDER%\..\rakudo
-  - cd %APPVEYOR_BUILD_FOLDER%\..\rakudo
-  - perl Configure.pl --gen-moar=HEAD --gen-nqp
-  - nmake install
-  - SET PATH=%APPVEYOR_BUILD_FOLDER%\..\rakudo\install\bin;%PATH%
+  - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
+  - SET PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
+  - rakudobrew build moar %TEST_MOAR%
+  - rakudobrew build zef
   - cd %APPVEYOR_BUILD_FOLDER%
+  - zef --depsonly install .
+  - zef install Test::META
+  - zef build .
 
 build: off
 
 test_script:
-  - prove -v -e "perl6 -Ilib" t/
-  - perl6 -Ilib bin/zef --verbose install .
-  - SET PATH=%APPVEYOR_BUILD_FOLDER%\..\rakudo\install\share\perl6\site\bin;%PATH%
-  - cd %APPVEYOR_BUILD_FOLDER%\..
-  - zef --verbose --force install Zef
+  - set AUTHOR_TESTING=1 && prove -ve "perl6 -Ilib"
+  - zef install .
 
 shallow_clone: true
