git subrepo clone --force git://github.com/MARTIMM/config-datalang-refine.git MARTIMM/config-datalang-refine
subrepo:
  subdir:   "MARTIMM/config-datalang-refine"
  merged:   "a566757"
upstream:
  origin:   "git://github.com/MARTIMM/config-datalang-refine.git"
  branch:   "master"
  commit:   "a566757"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/MARTIMM/config-datalang-refine/.travis.yml
+++ b/MARTIMM/config-datalang-refine/.travis.yml
@@ -8,10 +8,13 @@ perl6:
   - latest
 
 install:
-  - rakudobrew build-panda ${TRAVIS_PERL6_VERSION#latest}
-  - panda installdeps .
+  - rakudobrew build-zef ${TRAVIS_PERL6_VERSION#latest}
+  - zef update
+  - zef --depsonly install .
 
 cache:
   directories:
-    - $TRAVIS_BUILD_DIR/.rakudobrew
+#    - $TRAVIS_BUILD_DIR/.rakudobrew
+    - $HOME/Travis-ci
+    - $HOME/.rakudobrew
 
