--- a/MARTIMM/mongo-perl6-driver/doc/Manual/SemiXML.toml
+++ b/MARTIMM/mongo-perl6-driver/doc/Manual/SemiXML.toml
@@ -7,6 +7,8 @@
 [ option.doctype.entities ]
   mongodb       = 'MongoDB driver'
   nbsp          = ' '
+#  infin           = '&#8734;'
+  infin           = '&#x221E;'
 
 [output]
   fileext       = 'xml'
