--- a/MARTIMM/BSON/.travis.yml
+++ b/MARTIMM/BSON/.travis.yml
@@ -8,12 +8,10 @@ perl6:
   - latest
 
 install:
-  - rakudobrew build-panda ${TRAVIS_PERL6_VERSION#latest}
-  - panda installdeps .
-#  - panda update
-#  - panda install Digest::MD5 UUID
+  - rakudobrew build-zef ${TRAVIS_PERL6_VERSION#latest}
+  - zef --depsonly install .
 
 cache:
   directories:
-    - $TRAVIS_BUILD_DIR/.rakudobrew
-
+    - $HOME/Travis-ci
+    - $HOME/.rakudobrew
