git subrepo clone --force git://github.com/Tux/CSV.git Tux/CSV
subrepo:
  subdir:   "Tux/CSV"
  merged:   "6a102c6"
upstream:
  origin:   "git://github.com/Tux/CSV.git"
  branch:   "master"
  commit:   "6a102c6"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/Tux/CSV/Makefile
+++ b/Tux/CSV/Makefile
@@ -11,7 +11,7 @@ test:
 
 tt:     test time html
 
-test-verbose:	Text/CSV.pm
+test-verbose:	lib/Text/CSV.pm
 	perl6 -Ilib t/10_base.t
 	perl6 -Ilib t/12_acc.t
 	perl6 -Ilib t/15_flags.t
