--- a/perl6/gtk-simple/appveyor.yml
+++ b/perl6/gtk-simple/appveyor.yml
@@ -9,13 +9,15 @@ environment:
 
 install:
   - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
-  - choco install strawberryperl --allow-empty-checksums
+  - appveyor-retry choco install strawberryperl --version 5.20.1.1 --allow-empty-checksums
   - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
   - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
   - SET PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
   - rakudobrew build moar %TEST_MOAR%
   - rakudobrew build zef
   - cd %APPVEYOR_BUILD_FOLDER%
+  - echo "installing SSL so we can download the dll files"
+  - zef install IO::Socket::SSL
   - zef --depsonly install .
   - zef install Test::META
   - zef build .
