git subrepo clone --force git://github.com/szabgab/Perl6-Maven.git szabgab/Perl6-Maven
subrepo:
  subdir:   "szabgab/Perl6-Maven"
  merged:   "f29efbd"
upstream:
  origin:   "git://github.com/szabgab/Perl6-Maven.git"
  branch:   "main"
  commit:   "f29efbd"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/szabgab/Perl6-Maven/.travis.yml
+++ b/szabgab/Perl6-Maven/.travis.yml
@@ -4,8 +4,10 @@ branches:
 language: perl6
 sudo: false
 perl6:
+  - '2017.01'
   - latest
-#  - 2015.09
 install:
   - rakudobrew build-panda
   - panda installdeps .
+  #- zef install Bailador
+  # "JSON::Tiny", "LWP::Simple" ],
